--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         let stripCharr = str.split('')
         let result = []
         for (let idx in stripCharr) {
-          let charrr = stripCharr[idx]
-          if (charrr !== char) {
-            result[result.length] = charrr
+          let charr = stripCharr[idx]
+          if (charr !== char) {
+            result[result.length] = charr
           }
         }
         return result.join('')
